Fix bug with translations.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,5 @@
 en:
-    spree:
-        featured:
-            col_title: Featured
-            checkbox_label: Include in the "Featured Products" block
-            ajax_error: An error occured while saving the changes. The featured state of the product has not been changed.
+  spree:
+    featured_col_title: Featured
+    featured_checkbox_label: Include in the "Featured Products" block
+    featured_ajax_error: An error occured while saving the changes. The featured state of the product has not been changed.
